snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
ddccb579239dfd9655d1bfcfe44d8765724a028c06df4d09b5c9dacdb2f3803b